2 October 2008
+ Bug #2076972: Checking allow_url_fopen before allowing version checking.

10 September 2008
+ Revert reinstalls control panel links and tabs.
+ Requires control panel update.

12 August 2008
+ Boost's revert was copying core's images to the config directory.
+ Added fourth parameter to registerMyModule. If set to false (true is
  default), then the module won't be unregistered before registered
  again.
+ Second Close Window button added to top of update window.

13 June 2008
+ updateFiles will return true on complete success and and array of
  error messages should a file fail.
+ updateFiles will no longer stop if a single file fails
+ updateFiles now accepts a directory instead of a single file. The
  destination directory will be backed up and the source directory
  copied over.
+ updateFiles creates timestamped backup files now.

Version 2.2.2
-----------------------------------------------------
30 May 2008
+ Added error log to copy directory command.

Version 2.2.1
-----------------------------------------------------
29 November 2007
+ Update wasn't using popup.

5 November 2007
+ Install, uninstall, and update use popups now.

Version 2.2.0
-----------------------------------------------------
3 October 2007
+ Removed registered variable from Boost as it doesn't register
  modules to itself.
+ Added more error logging.
+ Changed Boost to conform with Core 1.6.3 registration change.

26 September 2007
+ Boost now checks all branch directories before allowing updates.
+ Boost will not allow installation if directories are not set.
+ Boost will show the options available should the directories get
  fixed. Before, it wouldn't show the link.
+ Updated: templates/module_list.tpl

19 September 2007
+ On a branch install, Boost was checking the hub's directory
  permissions instead of the branch's.

Version 2.1.3
-----------------------------------------------------
5 September 2007
+ Boost doesn't copy javascript files if in hub.