@@ -1258,6 +1258,17 @@ class PHPWS_Boost {
         }
     }
 
+    public function uninstallLink($module)
+    {
+        $uninstallVars = array('opmod'=>$module, 'action'=>'uninstall');
+        $js['question'] = dgettext('boost', 'Are you sure you want to uninstall this module? All data will be deleted.');
+        $js['question'] .= sprintf(dgettext('boost', '\nIf sure, please type the name of the module below: %s'), $module);
+        $js['address'] = PHPWS_Text::linkAddress('boost', $uninstallVars, TRUE);
+        $js['value_name'] = 'confirm';
+        $js['link'] = dgettext('boost', 'Uninstall');
+        return javascript('prompt', $js);
+    }
+
 }
 
 ?>
